--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "type": "module"
   },
   "dependencies": {
+    "@azure/data-tables": "^13.2.2",
     "@next/font": "13.4.8",
     "next": "13.4.8",
     "react": "18.2.0",
