--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@azure/data-tables": "^13.2.2",
     "@next/font": "13.4.8",
+    "isomorphic-unfetch": "^4.0.2",
     "next": "13.4.8",
     "react": "18.2.0",
     "react-dom": "18.2.0"
