--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "export": "next build && next export",
     "lint": "next lint",
-    "type": "module"
+    "type": "module",
+
   },
   "dependencies": {
     "@azure/data-tables": "^13.2.2",
