--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build && next export",
     "start": "next start",
     "lint": "next lint",
-    "type": "module"
+    "type": "module",
+    "export": "next build && next export"
   },
   "dependencies": {
     "@azure/data-tables": "^13.2.2",
